Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103735

QWebEnginePage::iconChanged() not emitted

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.5.0 Beta1
    • 6.3.0
    • WebEngine
    • None
    • Linux/X11
    • c5de1b2123 (qt/qtwebengine/dev) c5de1b2123 (qt/tqtc-qtwebengine/dev) d6f4bc46ad (qt/qtwebengine/6.3)

    Description

      Take the simplebrowser example.

      In TabWidget::createBackgroundTab(), just before the return, add the line

      webPage->load(QUrl("https://www.google.com/"));

      This will cause new tabs to open google.com by default. However, the tab icon is not updated: it does not show google.com favicon. Instead a default icon is displayed.

      Reloading the page, will cause the icon to be displayed.

      It seems that when the issue happen QWebEnginePage::iconChanged and QWebEnginePage::iconUrlChanged signals are not emitted.

      Note: it is possible to retrieve the icon by calling QWebEngineProfile::requestIconForPageURL once the page has loaded.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pvarga Peter Varga
            bterrier Benjamin Terrier
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes