Do not reset favicon for same document navigations

Fixes: QTBUG-103735
Pick-to: 6.3 6.4
Change-Id: Iee0c09cde16a825097b7c1c014655476989922c0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>